--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "crypto-js": "^3.1.9-1",
+    "dotenv": "^10.0.0",
     "express": "^4.16.4",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
