--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "node ./bin/server",
     "dev": "nodemon ./bin/server",
+    "lint": "eslint --ignore-path .gitignore --ext .js,.tx,.tsx .",
+    "lintfix": "eslint --fix --ignore-path .gitignore --ext .js,.tx,.tsx .",
     "configure": "./bin/configure_db.sh",
     "configure-dev": "npm run configure && npm run dev"
   },
@@ -13,23 +15,29 @@
   "license": "ISC",
   "dependencies": {
     "base-64": "^0.1.0",
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.19.0",
     "connect-multiparty": "^2.2.0",
-    "cookie-parser": "^1.4.4",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "crypto-js": "^3.1.9-1",
+    "crypto-js": "^3.3.0",
     "dotenv": "^10.0.0",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mssql": "^7.1.3",
     "multer": "^1.4.2",
     "path": "^0.12.7",
-    "pg": "^7.8.1",
+    "pg": "^7.18.2",
     "pg-format": "^1.0.4",
-    "pm2": "^4.5.1",
+    "pm2": "^4.5.6",
     "test": "^0.6.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.4.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.27.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "prettier": "^2.3.0"
   }
 }
