--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node ./bin/server",
     "dev": "nodemon ./bin/server",
     "lint": "eslint --ignore-path .gitignore --ext .js,.tx,.tsx .",
-    "lintfix": "eslint --fix --ignore-path .gitignore --ext .js,.tx,.tsx .",
+    "lintfix": "eslint --fix --ignore-path .gitignore --ext .js .",
     "configure": "./bin/configure_db.sh",
     "configure-dev": "npm run configure && npm run dev"
   },
