--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: Dockerfile
       target: base
     volumes:
-      - ./src:/home/node/app/src
+      - .:/home/node/app
     container_name: bill-api
     depends_on:
       - postgres
@@ -24,5 +24,16 @@ services:
       - "54321:5432"
     volumes:
       - bill-db-volume:/var/lib/postgresql/data
+  migration:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: base
+    volumes:
+      - .:/home/node/app
+    command: bash -c "npx knex migrate:up"
+    depends_on:
+      - bill-api
+      - postgres
 volumes:
   bill-db-volume:
