--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "knex": "^0.95.7",
     "moment": "^2.29.1",
     "mssql": "^7.1.3",
     "multer": "^1.4.2",
