--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node ./bin/server",
     "dev": "nodemon ./bin/server",
+    "test": "jest",
     "lint": "eslint --ignore-path .gitignore --ext .js,.tx,.tsx .",
     "lintfix": "eslint --fix --ignore-path .gitignore --ext .js .",
     "configure": "./bin/configure_db.sh",
@@ -39,7 +40,9 @@
     "eslint": "^7.27.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "jest": "^27.0.6",
     "nodemon": "^2.0.12",
-    "prettier": "^2.3.0"
+    "prettier": "^2.3.0",
+    "supertest": "^6.1.4"
   }
 }
