--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "cors": "^2.8.5",
     "crypto-js": "^3.3.0",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
+    "express-group-routes": "^1.1.0",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.7",
@@ -31,17 +31,20 @@
     "multer": "^1.4.2",
     "path": "^0.12.7",
     "pg": "^8.6.0",
-    "pg-format": "^1.0.4",
+    "pg-hstore": "^2.3.4",
     "pm2": "^4.5.6",
     "test": "^0.6.0",
-    "uuid": "^3.4.0"
+    "uuid": "^3.4.0",
+    "validatorjs": "^3.22.1"
   },
   "devDependencies": {
     "eslint": "^7.27.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "express": "^4.17.1",
     "jest": "^27.0.6",
     "nodemon": "^2.0.12",
+    "pg-format": "^1.0.4",
     "prettier": "^2.3.0",
     "supertest": "^6.1.4"
   }
