--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-DB_HOST=postgres
-DB_NAME=billadb
-DB_USER=postgres
-DB_PASS=secret
-DB_PORT=5432
-CORS_ORIGIN=http://localhost:3000
-APP_SECRET=foo123!123foo
+DB_HOST=
+DB_NAME=
+DB_USER=
+DB_PASS=
+DB_PORT=
+CORS_ORIGIN=
+APP_SECRET=
 # CORS_ORIGIN=http://103.119.92.48
