--- a/.env.test
+++ b/.env.test
@@ -1,8 +1,8 @@
-DB_HOST=127.0.0.1
-DB_NAME=test_billadb
-DB_USER=postgres
-DB_PASS=secret
-DB_PORT=54321
-CORS_ORIGIN=http://localhost:3000
-APP_SECRET=foo123!123foo
-# CORS_ORIGIN=http://103.119.92.48
+DB_HOST=
+DB_NAME=
+DB_USER=
+DB_PASS=
+DB_PORT=
+CORS_ORIGIN=
+APP_SECRET=
+# CORS_ORIGIN=
